# mkmidilibrary

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/analysis/: chord_analysis.rs  discrete.rs  floating_key.rs  melody.rs  mod.rs  reduce_chords.rs
src/core/: accidental.rs  chord.rs  chord_tables.rs  duration.rs  interval.rs  mod.rs  note.rs  pitch.rs  rest.rs
src/midi/: event.rs  file.rs  message.rs  mod.rs  track.rs  translate.rs
src/notation/: articulation.rs  beam.rs  clef.rs  dynamics.rs  expressions.rs  key.rs  meter.rs  mod.rs  scale.rs  spanner.rs  tempo.rs
src/realtime/: alsa_impl.rs  coremidi_impl.rs  input.rs  mod.rs  output.rs  port.rs  winmm_impl.rs
src/render/: clef.rs  config.rs  elements.rs  measure.rs  mod.rs  note.rs  staff.rs
src/stream/: base.rs  measure.rs  mod.rs  part.rs  score.rs  voice.rs
