[package]
name = "mkmidilibrary"
version = "0.1.1"
edition = "2021"
description = "Music scoring and MIDI library for Rust"
license = "MIT"
documentation = "https://docs.rs/mkmidilibrary"
repository = "https://github.com/mkaudio-company/mkmidilibrary"
keywords = ["music", "midi", "score", "notation", "audio"]
categories = ["multimedia::audio", "parser-implementations"]

[dependencies]
num = "0.4"
thiserror = "2.0"
bitflags = "2.6"

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["mmsystem", "mmeapi"] }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["realtime", "graphics"]
realtime = []
graphics = ["mkgraphic"]

[dependencies.mkgraphic]
version = "0.1.0"
optional = true
